// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: DropShadowWrapper renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={54}
              fx={54}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,54 a54,54 0 0 1 54 -54 v40 v14 h-14 h-40 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -40,
              "transform": Array [
                Object {
                  "translateX": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={54}
              fx={0}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a54,54 0 0 1 54,54 h-40 h-14 v-14 v-40 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={0}
              fx={54}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,54 a54,54 0 0 1 -54,-54 h40 h14 v14 v40 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -14,
                },
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,0 a54,54 0 0 1 -54,54 v-40 v-14 h14 h40 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGMask
              height="100%"
              maskContentUnits={1}
              maskTransform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              maskUnits={0}
              name="maskPaintBelow"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={4294967295}
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y="100%"
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y="100%"
              />
            </RNSVGMask>
          </RNSVGDefs>
          <RNSVGRect
            fill={4280637372}
            fillOpacity={0.1}
            height="100%"
            mask="maskPaintBelow"
            propList={
              Array [
                "fill",
                "fillOpacity",
              ]
            }
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          Array [
            undefined,
            Object {
              "alignSelf": "stretch",
            },
          ],
        ]
      }
    >
      <View
        pointerEvents="box-none"
      >
        <View
          pointerEvents="none"
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 1,
              },
              undefined,
            ]
          }
        >
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={11}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -10,
                  "position": "absolute",
                  "top": 15,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 11,
                },
              ]
            }
            width={11}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="left"
                  x1="1"
                  x2="0"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "left",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={10}
                x={0}
                y={-30}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth={11}
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": 15,
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": 11,
                },
              ]
            }
            width={11}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="right"
                  x1="0"
                  x2="1"
                  y1="0"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "right",
                  ]
                }
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={10}
                x={0}
                y={-30}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={11}
            bbWidth="100%"
            focusable={false}
            height={11}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": 15,
                  "position": "absolute",
                  "top": "100%",
                },
                Object {
                  "flex": 0,
                  "height": 11,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="bottom"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="1"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "bottom",
                  ]
                }
                height={10}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-30}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={11}
            bbWidth="100%"
            focusable={false}
            height={11}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": 15,
                  "position": "absolute",
                  "top": -10,
                },
                Object {
                  "flex": 0,
                  "height": 11,
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGLinearGradient
                  gradient={
                    Array [
                      0,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={0}
                  name="top"
                  x1="0"
                  x2="0"
                  y1="1"
                  y2="0"
                />
              </RNSVGDefs>
              <RNSVGRect
                fill={
                  Array [
                    1,
                    "top",
                  ]
                }
                height={10}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={-30}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={26}
            bbWidth={26}
            focusable={false}
            height={26}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -10,
                  "position": "absolute",
                  "top": -10,
                },
                Object {
                  "flex": 0,
                  "height": 26,
                  "width": 26,
                },
              ]
            }
            width={26}
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={25}
                  cy={25}
                  fx={25}
                  fy={25}
                  gradient={
                    Array [
                      0.6,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topLeft"
                  rx={25}
                  ry={25}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M0,25 a25,25 0 0 1 25 -25 v10 v15 h-15 h-10 Z"
                fill={
                  Array [
                    1,
                    "topLeft",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={26}
            bbWidth={26}
            focusable={false}
            height={26}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": -10,
                  "transform": Array [
                    Object {
                      "translateX": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 26,
                  "width": 26,
                },
              ]
            }
            width={26}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={25}
                  fx={0}
                  fy={25}
                  gradient={
                    Array [
                      0.6,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="topRight"
                  rx={25}
                  ry={25}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M0,0 a25,25 0 0 1 25,25 h-10 h-15 v-15 v-10 Z"
                fill={
                  Array [
                    1,
                    "topRight",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={26}
            bbWidth={26}
            focusable={false}
            height={26}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": -10,
                  "position": "absolute",
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateY": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 26,
                  "width": 26,
                },
              ]
            }
            width={26}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={25}
                  cy={0}
                  fx={25}
                  fy={0}
                  gradient={
                    Array [
                      0.6,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomLeft"
                  rx={25}
                  ry={25}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M25,25 a25,25 0 0 1 -25,-25 h10 h15 v15 v10 Z"
                fill={
                  Array [
                    1,
                    "bottomLeft",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight={26}
            bbWidth={26}
            focusable={false}
            height={26}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "left": "100%",
                  "position": "absolute",
                  "top": "100%",
                  "transform": Array [
                    Object {
                      "translateX": -15,
                    },
                    Object {
                      "translateY": -15,
                    },
                  ],
                },
                Object {
                  "flex": 0,
                  "height": 26,
                  "width": 26,
                },
              ]
            }
            width={26}
          >
            <RNSVGGroup
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
            >
              <RNSVGDefs>
                <RNSVGRadialGradient
                  cx={0}
                  cy={0}
                  fx={0}
                  fy={0}
                  gradient={
                    Array [
                      0.6,
                      219158568,
                      1,
                      1054760,
                    ]
                  }
                  gradientTransform={null}
                  gradientUnits={1}
                  name="bottomRight"
                  rx={25}
                  ry={25}
                />
              </RNSVGDefs>
              <RNSVGPath
                d="M25,0 a25,25 0 0 1 -25,25 v-10 v-15 h15 h10 Z"
                fill={
                  Array [
                    1,
                    "bottomRight",
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <RNSVGSvgView
            bbHeight="100%"
            bbWidth="100%"
            focusable={false}
            height="100%"
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "position": "absolute",
                },
                Object {
                  "flex": 0,
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <RNSVGGroup>
              <RNSVGDefs>
                <RNSVGMask
                  height="100%"
                  maskContentUnits={1}
                  maskTransform={
                    Array [
                      1,
                      0,
                      0,
                      1,
                      0,
                      0,
                    ]
                  }
                  maskUnits={0}
                  name="maskPaintBelow"
                  width="100%"
                  x="0%"
                  y="0%"
                >
                  <RNSVGRect
                    fill={4294967295}
                    height="100%"
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    width="100%"
                    x={0}
                    y={0}
                  />
                  <RNSVGRect
                    fill={4278190080}
                    height={15}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    width={15}
                    x={0}
                    y={0}
                  />
                  <RNSVGRect
                    fill={4278190080}
                    height={15}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        -15,
                        0,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    width={15}
                    x="100%"
                    y={0}
                  />
                  <RNSVGRect
                    fill={4278190080}
                    height={15}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        0,
                        -15,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    width={15}
                    x={0}
                    y="100%"
                  />
                  <RNSVGRect
                    fill={4278190080}
                    height={15}
                    matrix={
                      Array [
                        1,
                        0,
                        0,
                        1,
                        -15,
                        -15,
                      ]
                    }
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                    width={15}
                    x="100%"
                    y="100%"
                  />
                </RNSVGMask>
              </RNSVGDefs>
              <RNSVGRect
                fill={4279244840}
                fillOpacity={0.05}
                height="100%"
                mask="maskPaintBelow"
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          onLayout={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
              },
              undefined,
              Array [
                undefined,
                Object {
                  "alignSelf": "stretch",
                },
              ],
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`component: DropShadowWrapper renders with disableInnerWrapper 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 10,
            "position": "absolute",
            "right": 0,
            "top": 20,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={41}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 14,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 41,
            },
          ]
        }
        width={41}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={40}
            x={0}
            y={-28}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={41}
        bbWidth="100%"
        focusable={false}
        height={41}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 14,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 41,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={40}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-28}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": -40,
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={54}
              fx={54}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,54 a54,54 0 0 1 54 -54 v40 v14 h-14 h-40 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -40,
              "transform": Array [
                Object {
                  "translateX": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={54}
              fx={0}
              fy={54}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a54,54 0 0 1 54,54 h-40 h-14 v-14 v-40 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -40,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={54}
              cy={0}
              fx={54}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,54 a54,54 0 0 1 -54,-54 h40 h14 v14 v40 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={55}
        bbWidth={55}
        focusable={false}
        height={55}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -14,
                },
                Object {
                  "translateY": -14,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 55,
              "width": 55,
            },
          ]
        }
        width={55}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.25925925925925924,
                  438654908,
                  1,
                  2447292,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={54}
              ry={54}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M54,0 a54,54 0 0 1 -54,54 v-40 v-14 h14 h40 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGMask
              height="100%"
              maskContentUnits={1}
              maskTransform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              maskUnits={0}
              name="maskPaintBelow"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={4294967295}
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x={0}
                y="100%"
              />
              <RNSVGRect
                fill={4278190080}
                height={14}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -14,
                    -14,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={14}
                x="100%"
                y="100%"
              />
            </RNSVGMask>
          </RNSVGDefs>
          <RNSVGRect
            fill={4280637372}
            fillOpacity={0.1}
            height="100%"
            mask="maskPaintBelow"
            propList={
              Array [
                "fill",
                "fillOpacity",
              ]
            }
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          Array [
            undefined,
            Object {
              "alignSelf": "stretch",
            },
          ],
        ]
      }
    />
  </View>
</View>
`;
